<resources>
    <string name="app_name">Calorie Tracker</string>
    <string-array name="levelofactivity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="foodcategory">
        <item>vegetable</item>
        <item>drink</item>
        <item>bread</item>
        <item>meat</item>
        <item>fruit</item>
        <item>grain</item>
        <item>nut</item>
        <item>seafood</item>
    </string-array>

    <string name="title_activity_home_screen">Calorie Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome User!</string>
    <string name="nav_header_subtitle">Track your calorie right now!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_dailydiet">Dailydiet</string>
    <string name="menu_steps">Steps</string>
    <string name="menu_maps">Map</string>
    <string name="menu_reports">Reports</string>
</resources>
