<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dailydiet"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dailydiet" />
        <item
            android:id="@+id/nav_steps"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_reports" />

    </group>

    <item android:title="Version 1.1">

    </item>

</menu>
